k8s/apps/podinfo/podinfo-kustomization.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: podinfo
